--- a/style.css
+++ b/style.css
@@ -1,259 +1,222 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Lato:ital,wght@0,100;0,300;0,400;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
-
-* {
+/*Propriedades globais*/
+*{
   font-family: 'Lato', sans-serif;
 }
-
-.bg-primary-color {
+.bg-primary-color{
   background-color: #fff;
 }
-
-.bg-secondary-color {
+.bg-secondary-color{
   background-color: #ece8e2;
 }
-
-.bg-dark-color {
+.bg-dark-color{
   background-color: #050505;
 }
-
-.primary-color {
+.primary-color{
   color: #050505;
 }
-
-.secondary-color {
+.secondary-color{
   color: #7a7a7a;
 }
-
 /* NAVBAR */
-#navbar {
+#navbar{
   border-bottom: 1px solid #7a7a7a;
 }
-
-#navbar a {
+#navbar a{
   color: #050505;
 }
-
-#navbar a:hover {
+#navbar a:hover{
   color: #7a7a7a;
 }
-
-#navbar .active {
+#navbar .active{
   border-bottom: 1px solid #050505;
 }
-
-.navbar-brand {
+.navbar-brand{
   display: flex;
 }
-
-.navbar-brand img {
+.navbar-brand img{
   width: 40px;
 }
-
-.navbar-brand span {
+.navbar-brand span{
   font-weight: 700;
   font-size: 1.5em;
   margin-left: 0.5em;
 }
-
-#navbar-items .navbar-nav {
+#navbar-items .navbar-nav{
   display: flex;
   justify-content: center;
   width: 100%;
 }
-
-#navbar-items .nav-item {
+#navbar-items .nav-item{
   margin: 0 1em;
 }
-
 /* SLIDER */
-#slider {
+#slider{
   margin-top: 8em;
   margin-bottom: 1em;
 }
-
-
-#slider .carousel-caption h5 {
+#slider .carousel-caption h5{
     font-size: 2em;
     text-shadow: #000 2px 2px;
-
 }
-
-.btn {
+#slider .btn{
   border-radius: 0;
 }
-
-#slider .btn {
+#slider .btn{
   padding: 0.3em 0.5em;
   font-size: 0.8em;
   margin-top: 1em;
 }
-
-.carousel-control-prev,
-.carousel-control-next {
+#slider .carousel-control-prev,
+.carousel-control-next{
   opacity: 0.7;
 }
-
-.carousel-control-prev i,
-.carousel-control-next i {
+#slider .carousel-control-prev i,
+.carousel-control-next i{
   color: #111;
   font-size: 3em;
 }
-
 .carousel-indicators{
     margin-bottom: 0;
 }
-
-.carousel-indicators [data-bs-target] {
+.carousel-indicators [data-bs-target]{
   background-color: #222;
   opacity: 0.8;
-
 }
-
-.carousel-indicators .active {
+.carousel-indicators .active{
   background-color: #000;
 }
-/*Mini-Banner*/
-#mini-banners {
+/*Carousel banners*/
+#mini-banners{
     margin-bottom: 4em;
-  }
-
-#mini-banners .card {
+}
+#mini-banners .card{
     padding: 2em 0.3em;
     border-radius: 0;
     margin-bottom: 1em;
     margin-top:1em;
 }
-
-#mini-banners i {
+#mini-banners i{
     font-size: 2em;
 }
-
-#mini-banners .card-title {
+#mini-banners .card-title{
     margin-bottom: 1em;
 }
-
-#mini-banners .btn {
+#mini-banners .btn{
     margin-top: 1.5em;
     padding: 0.3em 0.5em;
-    /*padding: 0.6em 1.2em;*/
 }
+@media (min-width: 576px){
+  .carousel-caption{
+    bottom: 3em;
+  }
+  #slider .btn {
+    padding: 0.3em 0.5em;
+    font-size: 0.9em;
+    margin-top: 1em;
+  }
+}
+@media (min-width: 768px){
 
-@media (min-width: 425px) {
-  .carousel-caption{
-      bottom: 3em;
-  }
-  /*botao slider*/
-  #slider .btn {
-      padding: 0.3em 0.5em;
-      font-size: 0.9em;
-      margin-top: 1em;
-  }
-}
-@media (min-width: 768px) {
   #slider .carousel-caption h5 {
-      font-size: 2.5em;
+    font-size: 2.5em;
   }
   .carousel-caption{
-      bottom: 8em;
+    bottom: 8em;
   }
   #slider .btn {
-      padding: 0.3em 0.6em;
-      font-size: 1em;
-      margin-top: 1.5em;
+    padding: 0.3em 0.6em;
+    font-size: 1em;
+    margin-top: 1.5em;
     }
     .carousel-indicators{
       margin-bottom: 7em;
   }
   #mini-banners{
-      margin-top: -7em;
+    margin-top: -7em;
   }
   .card{
-      margin-top: 0;
+    margin-top: 0;
+  }
+  .card-body h5{
+    font-size:1em;
+  }
+  .card-body a{
+    font-size: 0.8em;
   }
 }
-@media (min-width: 1024px){
+@media (min-width: 1200px){
   #slider .carousel-caption h5 {
-      font-size: 3em;
+    font-size: 3em;
   }
   .carousel-caption{
-      bottom: 13em;
+    bottom: 13em;
   }
   #slider .btn {
-      padding: 0.6em 1.6em;
-      font-size: 1em;
-      margin-top: 1.5em;
+    padding: 0.6em 1.6em;
+    font-size: 1em;
+    margin-top: 1.5em;
     }
   .carousel-indicators{
-      margin-bottom: 10em;
+    margin-bottom: 10em;
   }
   #mini-banners{
-      margin-top: -9em;
+    margin-top: -9em;
   }
   #mini-banners i {
-      font-size: 4em;
+    font-size: 4em;
   }
 }
-
-@media (min-width: 1440px){
+@media (min-width: 1400px){
 #slider .carousel-caption h5 {
   font-size: 5em;
   text-shadow: #000 2px 3px;
-}
+  }
 #slider .btn {
-padding: 0.6em 1.6em;
-font-size: 1.2em;
-margin-top: 1.5em;
-}
+  padding: 0.6em 1.6em;
+  font-size: 1.2em;
+  margin-top: 1.5em;
+  }
   .carousel-caption{
-      bottom: 18em;
+    bottom: 18em;
   }
   .carousel-indicators{
-      margin-bottom: 8em;
+    margin-bottom: 8em;
   }
   #mini-banners{
-      margin-top: -8em;
+    margin-top: -8em;
   }
 }
-
-/*destaques*/
+/*Trabalhos*/
 #featured-container {
   margin-bottom: 4em;
 }
-
 .title {
   font-size: 1.75em;
   margin-bottom: 0.4em;
   position: relative;
   margin-top: 1em;
-
 }
-
 .title:before {
   width: 75px;
   content: '';
   position: absolute;
   bottom: 2em;
   border-top: 4px solid #7a7a7a;
-
-
 }
 #title-info-content::before{
   padding-top: 0.3em;
 }
-
 #featured-images {
   margin-top: 2em;
 }
-
 #featured-images .hover-title {
   position: relative;
   cursor: pointer;
 }
-
 #featured-images .hover-title:hover > .banner-content {
   opacity: 0.8;
 }
-
 #featured-images .banner-content {
   position: absolute;
   top: 0;
@@ -268,19 +231,13 @@ margin-top: 1.5em;
   opacity: 0.6;
   transition: 0.5s;
 }
-#info-banner{
-  margin-bottom: 1em;
-}
-
 @media (min-width: 768px) {
   .title {
     font-size: 2.4em;
   }
-
   .title:before {
     bottom: 1.5em;
   }
-
   #featured-images .banner-content {
     opacity: 0;
   }
@@ -288,34 +245,27 @@ margin-top: 1.5em;
     padding-top: 1em;
   }
 }
-@media (min-width: 1440px){
-  #title-info-content::before{
-    padding-top: 0;
-  }
+/*Detalhes importantes*/
+#info-banner-horiz{
+  margin-bottom: 1em;
 }
-
-
-#info-content {
+#info-content{
   margin-bottom: 4em;
   padding: 4em 1em;
 }
-
 #info-numbers {
   margin: 1.5em 0;
 }
-
-#info-banner {
+#info-banner-horiz{
   align-items: center;
   display: flex;
   margin-bottom: 2.5em;
 }
-
 #info-numbers h3 {
   font-size: 3em;
 }
-
 @media (min-width: 320px){
-    #info-banner-subs{
+    #info-banner-vert{
       display: none;
     }
   }
@@ -323,62 +273,55 @@ margin-top: 1.5em;
     #info-content {
       padding: 3.5em;
     }
-    #info-banner{
+    #info-banner-horiz{
       display: none;
     }
-    #info-banner-subs{
+    #info-banner-vert{
       align-items: center;
       display: flex;
     }
   }
-  @media (min-width: 1024px){
-    #info-banner-subs{
+  @media (min-width: 1200px){
+    #info-banner-vert{
       margin-bottom: 4em;
     }
-  }
-  @media (min-width: 1440px){
-    #info-banner-subs{
+    #info-banner-vert{
       display: none;
     }
-    #info-banner{
+    #info-banner-horiz{
       display: flex;
     }
   }
-
-
+  @media (min-width: 1400px){
+    #title-info-content::before{
+      padding-top: 0;
+    }
+}
 /* FOOTER TOP */
 #footer {
   padding: 3em 2em;
 }
-
 #footer-top {
   margin-bottom: 2em;
 }
-
 #footer-top,
 #footer-top i {
   color: #fff;
 }
-
 #social-icons {
   text-align: right;
 }
-
-#social-icons i {
+#social-icons i{
   margin-right: 1em;
   font-size: 1.5em;
   cursor: pointer;
 }
-
 #social-icons i:hover {
   color: #7a7a7a;
 }
-
-
 #footer-details {
   margin-bottom: 3em;
 }
-
 #news-container,
 #contact-container,
 #links-container {
@@ -386,52 +329,39 @@ margin-top: 1.5em;
   border: 0;
   margin-bottom: 2em;
 }
-
 #footer-details h4 {
   color: #fff;
   margin-bottom: 1.5em;
 }
-
 #news-container input {
   border-radius: 0;
   border: none;
 }
-
 #links-container li {
   margin-bottom: 0.5em;
 }
-
 #links-container a {
   text-decoration: none;
 }
-
 #links-container a:hover {
   color: #fff;
 }
-
-
-
 #footer-bottom {
   border-top: 1px solid #7a7a7a;
   padding-top: 2em;
 }
-
 #footer-bottom i {
   color: #e61e10;
 }
-
-
 @media (min-width: 768px) {
   #news-container {
     padding-right: 2em;
   }
-
   #contact-container {
     padding: 0 2em;
     border-left: 1px solid #7a7a7a;
     border-right: 1px solid #7a7a7a;
   }
-
   #links-container {
     padding-left: 2em;
   }
